--- a/coffee-app/package.json
+++ b/coffee-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "next": "^12.3.4",
     "react": "18.2.0",
