--- a/coffee-app/package.json
+++ b/coffee-app/package.json
@@ -13,7 +13,8 @@
     "lodash": "^4.17.21",
     "next": "^12.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "unsplash-js": "^7.0.18"
   },
   "devDependencies": {
     "eslint": "8.52.0",
